--- a/3-keyboard-accessibility/tabindex.html
+++ b/3-keyboard-accessibility/tabindex.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Button</title>
-    <link rel="stylesheet" href="button.css">
+    <link rel="stylesheet" href="tabindex.css">
     <script>
         function onClick() {
             alert("Button clicked!");
@@ -15,7 +15,7 @@
 <body>
     <div class="button-container">
         <button class="button" onclick="onClick()">Native Button</button>
-        <div class="fake-button" onclick="onClick()">Fake Button</div>
+        <div class="fake-button" tabindex="0" onclick="onClick()">Fake Button</div>
     </div>
 </body>
 </html>
