add aria labels for region landmarks

--- a/3-screen-reader-accessibility/hands-on-html-structure/solution/swimming-pigs.html
+++ b/3-screen-reader-accessibility/hands-on-html-structure/solution/swimming-pigs.html
@@ -12,21 +12,21 @@
         <h2>There is an uninhabited island on the Bahamas where you can swim with pigs</h2>
     </header>
     <main>
-        <section>
-            <h3>Why are there swimming pigs?</h3>
+        <section aria-labelledby="whysection">
+            <h3 id="whysection">Why are there swimming pigs?</h3>
             <p>A single, factual account of how the pigs ended up on the cay does not appear to exist. Folklore and various theories claim a number of different scenarios including pirates. Some say the pigs are said to have been dropped off on Big Major Cay by a group of sailors who wanted to come back and cook them. The sailors, though, never returned; the pigs survived on excess food dumped from passing ships. Another legend has it that the pigs were survivors of a shipwreck and managed to swim to shore, while other accounts claim that the pigs had escaped from a nearby islet.[9] Yet others suggest that the pigs were part of a business scheme to attract tourists to the Bahamas while another claims the pigs were stocked on the island in the 1990s by residents of nearby Staniel Cay to raise for food.</p>
             <figure>
-                <img src="materials/swimming-pig.jpg" alt="A pig swimming in the ocean" width="600px">
+                <img src="../materials/swimming-pig.jpg" alt="A pig swimming in the ocean" width="600px">
                 <figcaption>A pig swimming in the ocean</figcaption>
             </figure>
         </section>
-        <section>
-            <h3>How to get to pig island?</h3>
+        <section aria-labelledby="howsection">
+            <h3 id="howsection">How to get to pig island?</h3>
             <p>Pig Beach located on Big Major Cay (also known as Major Cay) is a beach on an uninhabited island (or cay) located in Exuma, the Bahamas. From Nassau to Pig Beach is 89 miles (143 km) and takes 2 hours by speed boat. A number of tour operators offer both private and group trips from Great Exuma, Staniel Cay, and other nearby cays.</p>
         </section>
-        <section>
-            <h3>Subscribe to our Newsletter now to get more information!</h3>
-            <form>
+        <section aria-labelledby="subscribe">
+            <h3 id="subscribe">Subscribe to our Newsletter now to get more information!</h3>
+            <form aria-labelledby="subscribe">
                 <label for="mail">Your e-mail address:</label>
                 <input type="email" id="mail" name="mail">
                 <input type="submit" value="Subscribe now">
