--- a/3-screen-reader-accessibility/html-structure/well-structured.html
+++ b/3-screen-reader-accessibility/html-structure/well-structured.html
@@ -13,8 +13,8 @@
       <h2>This is a website about cats</h2>
     </header>
     <main>
-      <section>
-        <h3>General Information</h3>
+      <section aria-labelledby="general">
+        <h3 id="general">General Information</h3>
         <p>
           The cat (Felis catus) is a domestic species of a small carnivorous
           mammal. It is the only domesticated species in the family Felidae and
@@ -56,8 +56,8 @@
         </p>
       </section>
 
-      <section>
-        <h3>Good Things about cats</h3>
+      <section aria-labelledby="goodthings">
+        <h3 id="goodthings">Good Things about cats</h3>
         <ul>
           <li>They look cute</li>
           <li>They have nice soft fur</li>
@@ -66,8 +66,8 @@
         </ul>
       </section>
 
-      <section>
-        <h3>Anatomy</h3>
+      <section aria-labelledby="anatomy">
+        <h3 id="anatomy">Anatomy</h3>
         <p>
           Most breeds of cat have a noted fondness for sitting in high places,
           or perching. A higher place may serve as a concealed site from which
